Updated recent script to be either controller.

--- a/Space-Team-Test.CSharp.csproj
+++ b/Space-Team-Test.CSharp.csproj
@@ -61,15 +61,6 @@
     <Reference Include="UnityEngine.Analytics">
       <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -143,6 +134,7 @@
     <Compile Include="Assets\Scripts\Mastermind_Script.cs" />
     <Compile Include="Assets\Scripts\Player_NetworkSetup.cs" />
     <Compile Include="Assets\Scripts\Pullcord_Script.cs" />
+    <Compile Include="Assets\Scripts\RecenterController.cs" />
     <Compile Include="Assets\Scripts\Score_Text_Script.cs" />
     <Compile Include="Assets\Scripts\Shifter_Script.cs" />
     <Compile Include="Assets\Scripts\Slider_Script.cs" />
